# vmidisnake

./: .gitmodules  CMakeLists.txt
src/: Files.cpp  Files.hpp  Main.cpp  MainComponent.cpp  MainComponent.hpp  Midi.cpp  Midi.hpp
